# ctf-writeups

./: .gitignore  README.md  pom.xml
src-cpp/: CMakeLists.txt
src-cpp/aoc21/day01/: day01.cpp
src-cpp/include/aoc/: StarBase.h  aoc_utils.h
src-cpp/src/: aoc_utils.cpp  cache.cpp  cache2.cpp  move_forward.cpp  my_vector.cpp
src-cpp/src/aoc21/day00/: day00.cpp
src-cpp/src/aoc21/day01/: day01.cpp  input.txt
src-cpp/src/aoc21/day02/: day02.cpp  input.txt
src-cpp/src/aoc21/day03/: day03.cpp
src-cpp/src/aoc21/day04/: day04.cpp  input.txt
src-cpp/src/aoc21/day05/: day05.cpp  input.txt
src-cpp/src/aoc21/day06/: day06.cpp  input.txt
src-cpp/src/aoc21/day07/: day07.cpp
src-cpp/src/aoc21/day08/: day08.cpp
src-cpp/src/aoc21/day09/: day09.cpp  input.txt
src-cpp/src/aoc21/day10/: day10.cpp  input.txt
src-cpp/src/aoc21/day11/: day11.cpp
src-cpp/src/aoc21/day12/: day12-mem-leak.cpp  day12.cpp
src-cpp/src/aoc21/day13/: day13.cpp
src-cpp/src/aoc21/day14/: day14.cpp  input.txt
src-cpp/src/aoc21/day15/: day15.cpp  input.txt
src-cpp/src/aoc21/day16/: day16.cpp  input.txt
src-python/: file_deleter.py  requirements.txt
src-python/aoc22/day01/: day01.py  input.txt
src-python/aoc22/day02/: input.txt
src-python/aoc22/day04/: day04.py
src-python/aoc22/day05/: day05.py
src-python/aoc22/day06/: input.txt
src-python/aoc22/day09/: day09.py
src-python/aoc22/day11/: day11.py
src-python/aoc22/day13/: day13.py  input-test.txt  input.txt
src-python/aoc22/day14/: day14.py
src-python/aoc22/day15/: day15.py
src-python/aoc22/day16/: day16.py  input.txt
src-python/aoc22/day17/: day17.py
src-python/aoc22/day18/: day18.py  input.txt
src-python/aoc22/day19/: day19.py
src-python/aoc22/day20/: day20.py
src-python/aoc22/day25/: day25.py
src-python/aoc23/day01/: input.txt
src-python/aoc23/day02/: input.txt
src-python/aoc23/day03/: day03.py  input.txt
src-python/aoc23/day04/: input.txt
src-python/aoc23/day05/: input.txt
src-python/aoc23/day07/: day07.py
src-python/aoc23/day08/: day08.py  input.txt
src-python/aoc23/day09/: day09.py  input.txt
src-python/aoc23/day10/: day10.py  input.txt
src-python/catch20/: ransomvid-decrypt.py
src-python/he21/: doldrums.py  mnemo.py  sailorsknot.py
src-python/hv20/: day10.py
src-python/util/: data_io.py  functions.py  misc.py
write-ups/Hackvent2019/: README.md
write-ups/Hackvent2020/: README.md
write-ups/HackyEaster2014/: README.md
write-ups/HackyEaster2019/: README.md
write-ups/HackyEaster2021/: README.md
write-ups/TheCatch2019/: README.md
write-ups/TheCatch2020/: README.md
write-ups/TheCatch2021/: README.md
write-ups/TheCatch2022/: README.md
write-ups/TheCatch2023/: README.md
(+704 files in other folders)
